tests/ui/range/range-inclusive-pattern-precedence2.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/range-inclusive-pattern-precedence2.rs:14:13
   |
LL |         box 10..=15 => {}
   |             ^^^^^^^
   |
help: add parentheses to clarify the precedence
   |
LL |         box (10..=15) => {}
   |             +       +

warning: `...` range patterns are deprecated
  --> $DIR/range-inclusive-pattern-precedence2.rs:10:14
   |
LL |         box 0...9 => {}
   |              ^^^ help: use `..=` for an inclusive range
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
note: the lint level is defined here
  --> $DIR/range-inclusive-pattern-precedence2.rs:5:9
   |
LL | #![warn(ellipsis_inclusive_range_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

